minor fixes in modality & trying to fix signin table

--- a/frontend/src/app/pages/mobile/login/login.component.html
+++ b/frontend/src/app/pages/mobile/login/login.component.html
@@ -11,7 +11,8 @@
             (click)="selectedavatar(i)"
             class="avatar"> <img  src="../../../../assets/players/mobile_player{{number}}.png" alt="Avatar{{number}}"></div>
         </div>
-        
-        <button id="confirm"  (click) = "addUser()" type="button" value="" ></button>
+        <div style="display:flex;justify-content: center;">
+            <button id="confirm"  (click) = "addUser()" type="button" value="" ></button>
+        </div>
     </form>
 </div>
