--- a/frontend/src/app/pages/signin-table/signin-table.component.html
+++ b/frontend/src/app/pages/signin-table/signin-table.component.html
@@ -1,5 +1,5 @@
-<div class="all">
-    <div class="background">
+<!-- <div class="all"> -->
+<!-- <div class="background">
         <div id="backgroundDay">
             <span id=mafiaDay>Mafia</span>
             <img id="dayV" src="/assets/augmented_table/signin/dayVector.png" alt="dayVector">
@@ -46,12 +46,25 @@
         <div id="confirm">
             <img id="tick" src="/assets/augmented_table/signin/tick.png" alt="">
         </div>
-
-    </div>
-    <div class="photos">
+        
+    </div> -->
+<!-- <div class="photos">
         <img id="leftBandit" src="assets/augmented_table/signin/leftBandit.png" alt="">
         <img id="gun" src="assets/augmented_table/signin/gun.png" alt="">
         <img id="rightBandit" src="assets/augmented_table/signin/rightBandit.png" alt="">
         <img id="hands" src="assets/augmented_table/signin/hands.png" alt="">
-    </div>
+    </div> -->
+
+<div id="bg">
+    <ul class='circle-container'>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+        <li><img src='/assets/augmented_table/signin/qr.png'></li>
+    </ul>
+    
 </div>
