--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -33,10 +33,11 @@
 .f {
   display: flex;
   flex-direction: row;
-  margin: 0 auto
+  margin: 0 auto;
 }
 
-.phase, .phaseNight {
+.phase,
+.phaseNight {
   margin-top: 28px;
   margin-right: -9.5px;
   margin-left: -9.5px;
@@ -85,7 +86,8 @@
   text-shadow: -1px -2px rgba(0, 0, 0, 0.33);
 }
 
-.selectedPhase, .selectedPhaseNight {
+.selectedPhase,
+.selectedPhaseNight {
   margin-top: 9px;
   margin-right: -14px;
   margin-left: -14px;
