--- a/frontend/src/app/pages/mobile/login/login.component.scss
+++ b/frontend/src/app/pages/mobile/login/login.component.scss
@@ -3,17 +3,18 @@
   font-style: normal;
   font-weight: normal;
   position: relative;
-  width: 360px;
-  height: 740px;
+  width: 100%;
+  min-height: 100em;
+  height: auto;
   line-height: 45px;
   font-size: 24px;
   background: #F5F7FA;
-  padding: 40px 12px;
+  padding: 6% 12px;
 }
 
 #inputname {
   position: relative;
-  width: 336px;
+  width: 100%;
   height: 45px;
   //   left: 12px;
   //   top: 79px;
@@ -52,7 +53,6 @@
     display: block;
     margin: auto;
     margin-top: 4px;
-    
 }
 
 #confirm {
@@ -60,8 +60,7 @@
     position: absolute;
     width: 85px;
     height: 86px;
-    left: 139px;
-    top: 610px;
+    margin: 6% 0;
     border: none;
     background: url("../../../../assets/checkbutton.png");
     text-decoration: none;;
