--- a/frontend/src/app/pages/signin-table/signin-table.component.scss
+++ b/frontend/src/app/pages/signin-table/signin-table.component.scss
@@ -5,6 +5,7 @@
 
 .background {
   display: flex;
+  z-index: -10;
 }
 
 #backgroundDay {
@@ -129,7 +130,7 @@
 
 #qr4 {
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   right: 293px;
 }
 
@@ -183,7 +184,7 @@
   top: 0;
   left: 44px;
   right: 44px;
-  z-index: 0;
+  z-index: -1;
 }
 
 #leftBandit {
@@ -216,4 +217,92 @@
   height: 266px;
   right: 0;
   bottom: 0;
+}
+//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#bg {
+  min-height: 100vh;
+  height: auto;
+  width: 100%;
+  background-image: url("/assets/augmented_table/signin/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/// Mixin to put items on a circle
+/// [1] - Allows children to be absolutely positioned
+/// [2] - Allows the mixin to be used on a list
+/// [3] - In case box-sizing: border-box has been enabled
+/// [4] - Allows any type of direct children to be targeted
+/// 
+/// @param {Integer} $nb-items - Number or items
+/// @param {Length} $circle-size - Container size
+/// @param {Length} $item-size - Item size
+/// @param {String | false} $class-for-IE - Base class name for old IE
+@mixin distribute-on-circle( $nb-items, $circle-size, $item-size, $class-for-IE: false ) {
+  $half-item: ($item-size / 2);
+  $half-parent: ($circle-size / 2);
+
+  position: relative;
+  /* 1 */
+  width: $circle-size;
+  height: $circle-size;
+  padding: 0;
+  border-radius: 50%;
+  list-style: none;
+  /* 2 */
+  box-sizing: content-box;
+  /* 3 */
+
+  > * {
+    /* 4 */
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: $item-size;
+    height: $item-size;
+    margin: -$half-item;
+  }
+
+  $angle: (360 / $nb-items);
+  $rot: 0;
+  @for $i from 1 through $nb-items {
+     @if not $class-for-IE{
+      > :nth-of-type(#{$i}) {
+        transform: rotate($rot * 1deg) translate($half-parent) rotate($rot * -1deg);
+      }
+    }
+    @else {
+      > .#{$class-for-IE}#{$i} {
+        // If CSS transforms are not supported
+        $mt: sin($rot * pi() / 180) * $half-parent - $half-item;
+        $ml: cos($rot * pi() / 180) * $half-parent - $half-item;
+        margin: $mt 0 0 $ml;
+      }
+    }
+
+    $rot: ($rot + $angle);
+  }
+}
+
+.circle-container {
+  @include distribute-on-circle(8, 32em, 8em, false);
+}
+
+ul {
+  margin-bottom: 0;
+}
+
+.circle-container img {
+  display: block;
+  width: 100%;
+  filter: grayscale(100%);
+
+  &:hover {
+    filter: grayscale(0);
+  }
 }
