basic size fixes

--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="background">
-    //TODO: is waiting is reversed 
+    <!-- //TODO: is waiting is reversed  -->
     <img *ngIf="isWaiting()" id="waiting" src="/assets/mobile/hourglass.png" alt="waitingscreen">
     <div *ngIf="!isWaiting()">
         <div id="cards">
