--- a/frontend/src/app/pages/homescreen-tv/homescreen-tv.component.scss
+++ b/frontend/src/app/pages/homescreen-tv/homescreen-tv.component.scss
@@ -1,8 +1,8 @@
 #background {
   background: url("/assets/homescreen/SmartTv.png");
-  width: 100%;
-  height: 1080px;
-
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
   font-family: Revalia;
   font-style: normal;
   font-weight: normal;
@@ -61,7 +61,7 @@
   width: 1920px;
   height: 478px;
   left: 0;
-  top: 602px;
+  bottom: 0;
 }
 
 #qr {
@@ -69,7 +69,7 @@
   width: 1776px;
   height: 48px;
   left: 80px;
-  top: 980px;
+  bottom: 38px;
   animation: blink 3s linear infinite;
 }
 @keyframes blink {
