--- a/frontend/src/app/pages/mobile/mobile.component.scss
+++ b/frontend/src/app/pages/mobile/mobile.component.scss
@@ -1,11 +1,16 @@
 
+#container {
+  height: 100%;
+  width: 100%;
+}
+
 @media only screen and (max-width: 325px) {
   #container {
-    zoom:0.8;
+    zoom: .8;
   }
 }
 @media only screen and (max-width: 170px) {
   #container {
-    zoom:0.5;
+    zoom: .5;
   }
 }
