--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -1,35 +1,33 @@
 <div class="all" [style.background-color]="isDay() ?  '#E67E22' : '#34495E'">
   <div class="wrapper">
-    <img [className]="isDay() ? 'tv_upper_icon_sun' : 'tv_upper_icon_moon'"
-      src="../../../../assets/smart_tv/{{upper_icon_path}}.png" alt="Background icon">
-    <span [className]="isDay() ? 'day_count' : 'night_count'">{{day + count}}</span>
+    <img class="tv_upper_icon" [attr.src]="isDay()? '/assets/smart_tv/Sun.png' : '/assets/smart_tv/moon.png'"
+      alt="Background icon">
+
+    <span class="count">{{day + count}}</span>
     <div class="middle">
       <div [className]="isSecretVoting() ? 'player_container_upper' : 'player_container'">
-        <div *ngFor="let player of players; let i=index">
-          <div [class.hidePlayers]="isSecretVoting() && isSuspect(i)"
-            [class.hidePlayers]="isSecretVoting() && isDead(i)"
-            [style.margin]="!isSuspect(i) && isSecretVoting() ? '0px 25px' : '0px 0px'">
-            <div class="name_text">{{player.name}}</div>
-            <img src="../../../../assets/players/{{player.avatar_path}}">
-          </div>
+        <div class="player" *ngFor="let player of players; let i=index"
+          [ngStyle]="isSecretVoting()? { 'width': 'calc(70% / (' + player_count + '-2))' } : {'width': 'calc(100% / ' + player_count + ')' }" 
+            [ngClass]="(isSecretVoting() && (isSuspect(i)||isDead(i))) ? 'hide': '' ">
+            <!-- 'width': 'calc(50% / ' + player_count + '-2)': 'width': 'calc(100% / ' + player_count + ')' } }" -->
+          <div class="name_text">{{player.name}}</div>
+          <img style="width: 95%;" src="/assets/players/{{player.avatar_path}}">
           <div class="votes" [ngClass]="{hide: !showVotes(i) || !isOpenBallot()}">
             {{this.votesOfPlayers.get(this.players[i].name)}}
           </div>
           <div *ngIf="!isSecretVoting() && isDead(i)" class="card">
-            <img src="../../../../assets/smart_tv/card_{{players[i].role}}.png" alt="card icon">
+            <img src="/assets/smart_tv/card_{{players[i].role}}.png" alt="card icon">
           </div>
         </div>
       </div>
-      <img [style.height]="!isSecretVoting()? '210px':'375px'" id="tv-rectangle" src="/assets/smart_tv/{{background_rect}}.png"
-        alt="Background vector">
+      <img [style.height]="!isSecretVoting()? '210px':'375px'" id="tv-rectangle"
+        src="/assets/smart_tv/{{background_rect}}.png" alt="Background vector">
       <div [ngClass]="{hide: !isSecretVoting()}">
-        <p id="final_words">Who will saytheir final words?</p>
+        <p id="final_words">Who will say their final words?</p>
         <div id="suspect_container">
-          <div *ngFor="let player of players; let i=index">
-            <div [ngClass]="{hide: !isSuspect(i)}">
-              <div [className]="isSuspect(i) ? 'name_text_down' : 'name_text'">{{player.name}}</div>
-              <img src="../../../../assets/players/{{player.avatar_path}}">
-            </div>
+          <div *ngFor="let player of players; let i=index" [ngClass]="{hide: !isSuspect(i)}" class="suspect">
+            <img style="width: 100%;" src="/assets/players/{{player.avatar_path}}">
+            <div [className]="isSuspect(i) ? 'name_text_down' : 'name_text'">{{player.name}}</div>
           </div>
         </div>
       </div>
