--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -62,7 +62,6 @@
   z-index: 4;
   position: relative;
   margin-top: -112px;
-  zoom: 1.1;
 }
 
 .suspects {
@@ -70,9 +69,6 @@
   position: relative;
 }
 
-.hidePlayers {
-  display: none;
-}
 
 #final_words {
   font-style: normal;
@@ -80,10 +76,10 @@
   font-size: 60px;
   line-height: 74px;
   z-index: 3;
-  position: relative;
   color: #F5F7FA;
+  position: absolute;
   width: 1920px;
-  top: -100px;
+  top: 391px;
 }
 
 .player_container {
@@ -103,12 +99,12 @@
 .player_container_upper {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: left;
   justify-content: flex-start;
   margin: 8% 0;
   position: relative;
   z-index: 1;
-  zoom: 0.8;
+  zoom: 0.7;
 }
 
 .player_container_upper * {
@@ -118,42 +114,37 @@
 
 .name_text {
   font-style: normal;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 45px;
-  text-align: center;
-  color: #656D78;
-  background: #F5F7FA;
-  border-radius: 28px;
-  margin-bottom: 5%;
-  width: 206px;
-  height: 46px;
+    font-weight: normal;
+    font-size: 36px;
+    text-align: center;
+    color: #656D78;
+    background: #F5F7FA;
+    border-radius: 28px;
+    margin: 0;
+    margin-bottom: 5%;
 }
 
 .name_text_down {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 45px;
-  text-align: center;
-  color: #656D78;
-  background: #F5F7FA;
-  border-radius: 28px;
-  width: fit-content;
-  padding: 0px 30px;
-  right: -148px;
-  bottom: -146px;
-  line-height: 40px;
-  z-index: 5;
-  margin: 0 100px;
-  position: relative;
+    font-size: 36px;
+    line-height: 45px;
+    color: #656D78;
+    background: #F5F7FA;
+    border-radius: 28px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 0px 30px;
+    z-index: 5;
+    position: relative;
+    bottom: 33%;
+    left: 68%;
 }
 
-.day_count {
+.count {
   position: absolute;
   height: 93px;
   top: 20px;
-  left: 1160px;
+  right: 300px;
 
   font-weight: normal;
   font-size: 103px;
@@ -164,31 +155,8 @@
   color: #FFFFFF;
 }
 
-.night_count {
-  position: absolute;
-  height: 93px;
-  left: 1160px;
-  top: 20px;
 
-  font-style: normal;
-  font-weight: normal;
-  font-size: 103px;
-  line-height: 128px;
-  display: flex;
-  align-items: center;
-
-  color: #FFFFFF;
-}
-
-.tv_upper_icon_sun {
-  position: absolute;
-  width: 250px;
-  height: 250px;
-  left: 1641px;
-  top: 21px;
-}
-
-.tv_upper_icon_moon {
+.tv_upper_icon{
   position: absolute;
   width: 231px;
   height: 231px;
@@ -278,5 +246,17 @@
   z-index: 1;
 }
 .hide{
-  display:none;
+  display:none !important;
+}
+
+.player{
+  display:flex;
+  margin: 0 30px;
+  flex-direction: column;
+  // width: 'calc(100% / ' + player_count + ')';
+}
+
+.suspect{
+  width: 240px;
+  margin: 58px 100px;
 }
