--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.scss
@@ -1,5 +1,5 @@
 .background {
-  background-color: #34495e;
+  // background-color: #34495e;
   width: 100%;
   display: flex;
   justify-content: center;
