--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -4,12 +4,14 @@
       alt="Background icon">
 
     <span class="count">{{day + count}}</span>
+    <img [style.height]="!isSecretVoting()? '210px':'375px'" id="tv-rectangle"
+      src="/assets/smart_tv/{{background_rect}}.png" alt="Background vector">
     <div class="middle">
       <div [className]="isSecretVoting() ? 'player_container_upper' : 'player_container'">
-        <div class="player" *ngFor="let player of players; let i=index"
-          [ngStyle]="isSecretVoting()? { 'width': 'calc(70% / (' + player_count + '-2))' } : {'width': 'calc(100% / ' + player_count + ')' }" 
-            [ngClass]="(isSecretVoting() && (isSuspect(i)||isDead(i))) ? 'hide': '' ">
-            <!-- 'width': 'calc(50% / ' + player_count + '-2)': 'width': 'calc(100% / ' + player_count + ')' } }" -->
+        <div class="player" *ngFor="let player of players; let i=index" [ngStyle]="isSecretVoting()? { 'width': 'calc(70% / (' + player_count + '-2))' } :
+                     {'width': 'calc(95% / ' + player_count + ')' }"
+          [ngClass]="(isSecretVoting() && (isSuspect(i)||isDead(i))) ? 'hide': '' ">
+          <!-- 'width': 'calc(50% / ' + player_count + '-2)': 'width': 'calc(100% / ' + player_count + ')' } }" -->
           <div class="name_text">{{player.name}}</div>
           <img style="width: 90%;" src="/assets/players/{{player.avatar_path}}">
           <div class="votes" [ngClass]="{hide: !showVotes(i) || !isOpenBallot()}">
@@ -20,26 +22,24 @@
           </div>
         </div>
       </div>
-      <img [style.height]="!isSecretVoting()? '210px':'375px'" id="tv-rectangle"
-        src="/assets/smart_tv/{{background_rect}}.png" alt="Background vector">
-      <div [ngClass]="{hide: !isSecretVoting()}">
-        <p id="final_words">Who will say their final words?</p>
-        <div id="suspect_container">
-          <div *ngFor="let player of players; let i=index" [ngClass]="{hide: !isSuspect(i)}" class="suspect">
-            <img style="width: 100%;" src="/assets/players/{{player.avatar_path}}">
-            <div [className]="isSuspect(i) ? 'name_text_down' : 'name_text'">{{player.name}}</div>
-          </div>
+    </div>
+    <div [ngClass]="{hide: !isSecretVoting()}">
+      <p id="final_words">Who will say their final words?</p>
+      <div id="suspect_container">
+        <div *ngFor="let player of players; let i=index" [ngClass]="{hide: !isSuspect(i)}" class="suspect">
+          <img style="width: 100%;" src="/assets/players/{{player.avatar_path}}">
+          <div [className]="isSuspect(i) ? 'name_text_down' : 'name_text'">{{player.name}}</div>
         </div>
       </div>
-      <div>
-        <p id="next_up_text">next up:</p>
-        <img class="next_up_img" src="../../../../assets/smart_tv/{{next_up_icon}}.png" alt="next up"
-          (click)="changeRound();">
-        <p class="next_up_title">{{next_title}}</p>
-      </div>
-      <div class="round">
-        <p class="down_title">{{phase_title}}</p>
-        <img class="down_vector" src="../../../../assets/smart_tv/{{round_title_path}}.png" alt="Title of round">
-      </div>
+    </div>
+    <div>
+      <p id="next_up_text">next up:</p>
+      <img class="next_up_img" src="../../../../assets/smart_tv/{{next_up_icon}}.png" alt="next up"
+        (click)="changeRound();">
+      <p class="next_up_title">{{next_title}}</p>
+    </div>
+    <div class="round">
+      <p class="down_title">{{phase_title}}</p>
+      <img class="down_vector" src="../../../../assets/smart_tv/{{round_title_path}}.png" alt="Title of round">
     </div>
   </div>
