--- a/frontend/src/app/pages/mobile/login/login.component.scss
+++ b/frontend/src/app/pages/mobile/login/login.component.scss
@@ -4,28 +4,28 @@
   font-weight: normal;
   position: relative;
   width: 100%;
-  min-height: 100em;
-  height: auto;
+  height: 100vh;
+  margin:0;
   line-height: 45px;
   font-size: 24px;
-  background: #F5F7FA;
-  padding: 6% 12px;
+  background: black;
+  padding: 1px 5% 0 5%;
+  color:white;
 }
 
 #inputname {
   position: relative;
   width: 100%;
-  height: 45px;
-  //   left: 12px;
-  //   top: 79px;
-  font-size: 18px;
+  line-height:55px;
+  // font-size: 20px;
   font-style: light;
   color: white;
   background: #E74C3C;
   border-radius: 10px;
-  padding: 12px;
+  padding: 0 12px 5px 12px;
   border: none;
-  margin-bottom: 20px;
+  vertical-align: middle;
+  outline: none;
 }
 
 ::placeholder {
@@ -60,11 +60,14 @@
   position: absolute;
   width: 85px;
   height: 86px;
-  margin: 6% 0;
+  margin: 5% 0;
   border: none;
   background: url("/assets/checkbutton.png");
   text-decoration: none;
   right: 10%;
+  outline:none;
+
+  
 }
 
 .selected {
@@ -72,4 +75,16 @@
   background: no-repeat url("/assets/players/avatar_selected.png");
   background-size: contain;
   background-origin: padding-box;
+}
+
+.title{
+  margin: 5% 0 3% 0;
+}
+
+#alert{
+  color:red; 
+  font-size:14px;margin-top: -6%;
+}
+#alert:empty{
+  display:none;
 }
