--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -14,6 +14,10 @@
 
 .middle {
   text-align: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding-top: 100px;
 }
 
 .votes {
@@ -77,10 +81,7 @@
 .player_container {
   display: flex;
   flex-direction: row;
-  //align-items: center;
-  justify-content: space-around;
-  margin: 21% 0;
-  position: relative;
+  justify-content: space-evenly;
   z-index: 1;
 }
 
@@ -107,15 +108,20 @@
 .name_text {
   font-style: normal;
     font-weight: normal;
-    font-size: 36px;
     text-align: center;
     color: #656D78;
     background: #F5F7FA;
     border-radius: 28px;
     margin: 0;
     margin-bottom: 5%;
-    padding: 0 15px;
-}
+    font-size:2vmax;
+    width:100%;
+    line-height:50px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
 .name_text_down {
     font-size: 36px;
@@ -244,7 +250,7 @@
 
 .player{
   display:flex;
-  margin: 0 30px;
+  // margin: 0 30px;
   flex-direction: column;
   justify-items: center;
   align-content: center;
