--- a/frontend/src/app/pages/mobile/login/login.component.scss
+++ b/frontend/src/app/pages/mobile/login/login.component.scss
@@ -5,24 +5,24 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  margin:0;
+  margin: 0;
   line-height: 45px;
   font-size: 24px;
   background: black;
-  padding: 1px 5% 0 5%;
-  color:white;
+  padding: 1px 5% 0;
+  color: white;
 }
 
 #inputname {
   position: relative;
   width: 100%;
-  line-height:55px;
+  line-height: 55px;
   // font-size: 20px;
   font-style: light;
   color: white;
   background: #E74C3C;
   border-radius: 10px;
-  padding: 0 12px 5px 12px;
+  padding: 0 12px 5px;
   border: none;
   vertical-align: middle;
   outline: none;
@@ -62,12 +62,15 @@
   height: 86px;
   margin: 5% 0;
   border: none;
-  background: url("/assets/checkbutton.png");
+  background: no-repeat url("/assets/checkbutton.png");
   text-decoration: none;
   right: 10%;
-  outline:none;
+  filter:drop-shadow(2px 3px 0px #259A56);
+}
 
-  
+#confirm:active {
+  filter:none;
+  transform: translate(2px,3px);
 }
 
 .selected {
@@ -77,14 +80,16 @@
   background-origin: padding-box;
 }
 
-.title{
-  margin: 5% 0 3% 0;
+.title {
+  margin: 5% 0 3%;
 }
 
-#alert{
-  color:red; 
-  font-size:14px;margin-top: -6%;
+#alert {
+  color: red;
+  font-size: 14px;
+  margin-top: -4%;
 }
-#alert:empty{
-  display:none;
+
+#alert:empty {
+  display: none;
 }
