--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="background">
     <!-- //TODO: is waiting is reversed  -->
-    <img *ngIf="isWaiting()" id="waiting" src="/assets/mobile/hourglass.png" alt="waitingscreen">
-    <div *ngIf="!isWaiting()">
+    <img *ngIf="parent.isWaiting()" id="waiting" src="/assets/mobile/hourglass.png" alt="waitingscreen">
+    <div *ngIf="!parent.isWaiting()">
         <div id="cards">
-            <div class="flip-card" *ngFor="let player of players; let i = index;">
+            <div class="flip-card" *ngFor="let player of parent.players; let i = index;">
                 <div class="flip-card-inner" (click)="toggleflip(i)" [ngClass]="flips[i] ? 'flip' : ''">
                     <div class="flip-card-front">
                         <img class="avatar" src="/assets/players/mobile_{{player.avatar_path}}">
@@ -12,7 +12,14 @@
                     <div class="flip-card-back">
                         <div class="myrow">
                             <img class="avatar" src="/assets/players/mobile_{{player.avatar_path}}">
-                            <div class="playername">{{player.name}}</div>
+                            <div style="display: flex;
+                            justify-content: center;
+                            align-content: center;
+                            flex-direction: column;
+                            height:100%">
+                                <div class="playername">{{player.name}}</div>
+
+                            </div>
                         </div>
 
                         <img src="/assets/roles/{{player.role}}.png">
