--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -8,10 +8,9 @@
       src="/assets/smart_tv/{{background_rect}}.png" alt="Background vector">
     <div class="middle">
       <div [className]="isSecretVoting() ? 'player_container_upper' : 'player_container'">
-        <div class="player" *ngFor="let player of players; let i=index" [ngStyle]="isSecretVoting()? { 'width': 'calc(70% / (' + player_count + '-2))' } :
+        <div class="player" *ngFor="let player of players; let i=index" [ngStyle]="isSecretVoting()? { 'width': 'calc(75% / (' + suspect_count + '-2))' } :
                      {'width': 'calc(95% / ' + player_count + ')' }"
           [ngClass]="(isSecretVoting() && (isSuspect(i)||isDead(i))) ? 'hide': '' ">
-          <!-- 'width': 'calc(50% / ' + player_count + '-2)': 'width': 'calc(100% / ' + player_count + ')' } }" -->
           <div class="name_text">{{player.name}}</div>
           <img style="width: 90%;" src="/assets/players/{{player.avatar_path}}">
           <div class="votes" [ngClass]="{hide: !showVotes(i) || !isOpenBallot()}">
@@ -23,7 +22,7 @@
         </div>
       </div>
     </div>
-    <div [ngClass]="{hide: !isSecretVoting()}">
+    <div class="secretVoting" [ngClass]="{hide: !isSecretVoting()}">
       <p id="final_words">Who will say their final words?</p>
       <div id="suspect_container">
         <div *ngFor="let player of players; let i=index" [ngClass]="{hide: !isSuspect(i)}" class="suspect">
