--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -35,11 +35,11 @@
 }
 
 .card {
-    align-self: center;
-    width: 118px;
-    height: 151px;
-    border-radius: 12%;
-    margin-top: -20px;
+  align-self: center;
+  width: 118px;
+  height: 151px;
+  border-radius: 12%;
+  margin-top: -20px;
 }
 
 #tv-rectangle {
@@ -56,26 +56,12 @@
   justify-content: center;
   z-index: 4;
   position: relative;
-  margin-top: -112px;
+  margin-top: -50px;
 }
-
 
 .suspects {
   zoom: 1.1;
   position: relative;
-}
-
-
-#final_words {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 74px;
-  z-index: 3;
-  color: #F5F7FA;
-  position: absolute;
-  width: 1920px;
-  top: 391px;
 }
 
 .player_container {
@@ -93,11 +79,13 @@
   display: flex;
   flex-direction: row;
   align-items: left;
-  justify-content: flex-start;
-  margin: 8% 0;
+  justify-content: space-evenly;
+  width: 68%;
+  bottom: -58px;
   position: relative;
   z-index: 1;
-  zoom: 0.7;
+  zoom: .7;
+  align-self: flex-start;
 }
 
 .player_container_upper * {
@@ -107,36 +95,35 @@
 
 .name_text {
   font-style: normal;
-    font-weight: normal;
-    text-align: center;
-    color: #656D78;
-    background: #F5F7FA;
-    border-radius: 28px;
-    margin: 0;
-    margin-bottom: 5%;
-    font-size:2vmax;
-    width:100%;
-    line-height:50px;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  font-weight: normal;
+  text-align: center;
+  color: #656D78;
+  background: #F5F7FA;
+  border-radius: 28px;
+  margin: 0 0 5%;
+  font-size: 2vmax;
+  width: 100%;
+  line-height: 50px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .name_text_down {
-    font-size: 36px;
-    line-height: 45px;
-    color: #656D78;
-    background: #F5F7FA;
-    border-radius: 28px;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    padding: 0px 30px;
-    z-index: 5;
-    position: relative;
-    bottom: 33%;
-    left: 68%;
+  font-size: 36px;
+  line-height: 45px;
+  color: #656D78;
+  background: #F5F7FA;
+  border-radius: 28px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0 30px;
+  z-index: 5;
+  position: relative;
+  bottom: 33%;
+  left: 68%;
 }
 
 .count {
@@ -154,8 +141,7 @@
   color: #FFFFFF;
 }
 
-
-.tv_upper_icon{
+.tv_upper_icon {
   position: absolute;
   width: 231px;
   height: 231px;
@@ -222,7 +208,7 @@
 
 .round * {
   margin-left: 93px;
-  bottom: 0px;
+  bottom: 0;
   position: absolute;
 }
 
@@ -244,12 +230,12 @@
   z-index: 1;
 }
 
-.hide{
-  display:none !important;
+.hide {
+  display: none !important;
 }
 
-.player{
-  display:flex;
+.player {
+  display: flex;
   // margin: 0 30px;
   flex-direction: column;
   justify-items: center;
@@ -258,7 +244,25 @@
   // width: 'calc(100% / ' + player_count + ')';
 }
 
-.suspect{
+.suspect {
   width: 240px;
   margin: 58px 100px;
+}
+
+#final_words {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 74px;
+  z-index: 3;
+  color: #F5F7FA;
+}
+
+.secretVoting {
+  position: absolute;
+  width: 100%;
+  top: 391px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
