--- a/frontend/src/app/pages/signin-table/signin-table.component.html
+++ b/frontend/src/app/pages/signin-table/signin-table.component.html
@@ -1,70 +1,32 @@
-<!-- <div class="all"> -->
-<!-- <div class="background">
-        <div id="backgroundDay">
-            <span id=mafiaDay>Mafia</span>
-            <img id="dayV" src="/assets/augmented_table/signin/dayVector.png" alt="dayVector">
-        </div>
-        <div id="backgroundNight">
-            <span id=mafiaNight>Mafia</span>
-            <img id="nigthV" src="/assets/augmented_table/signin/nightVector.png" alt="dayVector">
+<div class="all">
+    <div class="center">
+        <div class="qrCodes">
+            <ul class='circle-container'>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+                <li><img id=add src='/assets/augmented_table/signin/add.png'></li>
+                <li><div class="qr"> <img class="qrImg" src='{{qr}}'></div></li>
+            </ul>
+            <div id="confirm" [style.background-color]="readyToPlay() ? '#2ECC71' : '#aaaaa'"
+                [style.boxShadow]="readyToPlay() ? '9px 8px 0px #259A56' : '0 0 0'">
+                <img id="tick" src="/assets/augmented_table/signin/tick.png" alt="">
+            </div>
+            <div class="joinedPlayers" *ngIf="!readyToPlay()" >
+                <p id=p1>{{joined_players}}/7</p>
+                <p id=p2>{{joined_players}}/7</p>
+                <p id=p3>{{joined_players}}/7</p>
+                <p id=p4>{{joined_players}}/7</p>
+            </div>
         </div>
     </div>
-    <div class="center">
-        <img class="table" src="/assets/augmented_table/signin/table.png" alt="">
-        <div class="qrCodes">
-            <div class="addPlayer">
-                <img src="/assets/augmented_table/signin/add.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr1" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr2" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr3" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr4" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr5" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr6" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr7" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr8" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-            <div class="qr">
-                <img id="qr9" src="/assets/augmented_table/signin/qr.png" alt="">
-            </div>
-        </div>
-        <div id="confirm">
-            <img id="tick" src="/assets/augmented_table/signin/tick.png" alt="">
-        </div>
-        
-    </div> -->
-<!-- <div class="photos">
+    <div class="photos">
         <img id="leftBandit" src="assets/augmented_table/signin/leftBandit.png" alt="">
         <img id="gun" src="assets/augmented_table/signin/gun.png" alt="">
         <img id="rightBandit" src="assets/augmented_table/signin/rightBandit.png" alt="">
         <img id="hands" src="assets/augmented_table/signin/hands.png" alt="">
-    </div> -->
-
-<div id="bg">
-    <ul class='circle-container'>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-        <li><img src='/assets/augmented_table/signin/add.png'></li>
-        <li><img src='/assets/augmented_table/signin/qr.png'></li>
-    </ul>
-    
+    </div>
 </div>
