--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -10,11 +10,12 @@
 .wrapper {
   overflow: hidden;
   z-index: -1;
+  height: 100%;
 }
 
 .middle {
   text-align: center;
-  height: 100vh;
+  height: 100%;
   display: flex;
   align-items: center;
   padding-top: 100px;
@@ -81,8 +82,8 @@
   align-items: left;
   justify-content: space-evenly;
   width: 68%;
-  bottom: -58px;
-  position: relative;
+  bottom: 1028px;
+  position: absolute;
   z-index: 1;
   zoom: .7;
   align-self: flex-start;
@@ -200,7 +201,7 @@
 
 .round {
   width: 100%;
-  height: 1080px;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: flex-end;
