--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.scss
@@ -10,8 +10,11 @@
 }
 
 #waiting {
-  width: 80%;
+  max-height: 80vh;
+  max-width: 80%;
+  width: auto;
   height: auto;
+
 }
 
 #cards {
@@ -124,6 +127,10 @@
   border:none;
   background: none;
   padding:0;
+}
+#flipbutton img{
+  width: 100%;
+    height: 100%;
 }
 #flipbutton:active {
   filter:none;
